--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,8 @@
-= TrackerWatch
+== TrackerWatch
+------------
 This is a server for watch that send SOS/Command via GPRS or SMS. It need for work a GSM Modem (I've used a Telit GM862-Quad).
 In the option file you should set all the information of the software:
-
+------------
 COM_PORT = COM7
 Here you should set the COM port of your modem
 
@@ -20,13 +21,13 @@ This is used to set if the application should start as Server or Client.
 SERVER_IP = 192.168.2.252
 SERVER_PORT = 8002
 This is used to intercomunicate between Client and Server.
-
+------------
 Please check that you have this port opened in your firewall.
-
+------------
 
 To create the MySQL Database, please use this (Copy and paste in your database management gui),
 
-
+```
 -- MySQL dump 10.13  Distrib 5.7.17, for Win64 (x86_64)
 --
 -- Host:        Database: watch
@@ -161,3 +162,4 @@ CREATE TABLE `users` (
 /*!40101 SET CHARACTER_SET_RESULTS=@OLD_CHARACTER_SET_RESULTS */;
 /*!40101 SET COLLATION_CONNECTION=@OLD_COLLATION_CONNECTION */;
 /*!40111 SET SQL_NOTES=@OLD_SQL_NOTES */;
+```
